# glimpse

./: .gitignore  Cargo.toml  Task.md  log.json  pre-commit.sh  report.md
Mail/: Guardian.md
demo/: Cargo.toml  refactor_naming.txt
demo/src/: main.rs
glimpse/: Cargo.toml  architecture.csv  memories.csv  refactor_naming.txt  todo.csv
glimpse/src/: lib.rs
insight/: Cargo.toml  architecture.csv  memories.csv  refactor_naming.txt  todo.csv
insight/examples/: main.rs
insight/src/: lib.rs
storage/: Cargo.toml  architecture.csv  memories.csv  todo.csv
storage/benches/: storage_benchmarks.rs
storage/examples/: main.rs
storage/src/: lib.rs
